<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context="uberapp.balran.uberapp.login.RegisterActivity">

    <TextView
        android:id="@+id/tv_login_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/regular"
        android:text="@string/tv_gotologin"
        android:textColor="@color/colorLightBlue"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/hint_register_welcome"
        android:textColor="@color/colorWhite"
        android:textSize="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <EditText
        android:id="@+id/et_password_register_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/hint_passwordlogin"
        android:inputType="textPassword"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/et_email_register_driver"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email_register_driver"
        app:layout_constraintTop_toBottomOf="@+id/et_email_register_driver" />

    <EditText
        android:id="@+id/et_confirmpassword_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/hint_confirmpassword"
        android:inputType="textPassword"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/et_email_register_driver"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email_register_driver"
        app:layout_constraintTop_toBottomOf="@+id/et_password_register_driver" />

    <EditText
        android:id="@+id/et_email_register_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/button_register_driver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="Registrarme"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_password_register_driver"
        app:layout_constraintStart_toStartOf="@+id/et_password_register_driver"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmpassword_driver" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="65dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="270dp" />
</androidx.constraintlayout.widget.ConstraintLayout>